feat: add load and production sum to sld legend
Signed-off-by: LE SAULNIER Kevin <kevin.lesaulnier@rte-france.com>